# keylia-platform

./: .gitignore  QUICK_START.md  README.md  SETUP.md  SETUP_CHECKLIST.md  SUPABASE_QUICKSTART.md  TEST_REPORT.md  TOUR_VIDEO_SETUP.md  docker-compose.yml  package-lock.json
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: config.py  database.py  exceptions.py  main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: __init__.py  ai.py  auth.py  billing.py  brand_kits.py  media.py  projects.py  properties.py  render_jobs.py  tour_videos.py  users.py
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  billing.py  brand_kit.py  media.py  project.py  property.py  render.py  social.py  user.py
backend/app/services/: billing.py  circuit_breaker.py  sanitization.py
backend/app/services/ai/: elevenlabs_service.py  fal_video_service.py  script_generator.py  video_compositor.py
backend/app/workers/: __init__.py  celery_app.py  database.py
backend/app/workers/tasks/: fal_video.py  generate_voiceover.py  render_infographic.py  render_video.py  tour_video.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py
backend/tests/: __init__.py  conftest.py  test_ai.py  test_api_integration.py  test_auth.py  test_health.py  test_projects.py  test_rate_limiting.py  test_stripe_webhooks.py  test_tour_video_pipeline.py
docs/: 01-PRODUCT-SPECIFICATION.md  02-SYSTEM-ARCHITECTURE.md  03-DATA-MODEL-API.md  04-UX-FLOWS-SCREENS.md  05-AI-PROMPTING-PIPELINES.md  SUPABASE_SETUP.md
(+80 files in other folders)
